Correção ao buscar parâmetros PDV.