@@ -17,6 +17,7 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class ProdutosService extends WebServiceRequestsService{
@@ -71,6 +72,6 @@ public class ProdutosService extends WebServiceRequestsService{
                 produtos.add(ProdutoTabela.fromXml(nNode));
             }
         }
-        return produtos.stream().filter(prod -> prod.getCodTpr().equals(codTpr)).toList();
+        return produtos.stream().filter(prod -> prod.getCodTpr().equals(codTpr)).collect(Collectors.toList());
     }
 }
